Changes in @NEW@:
  o Server Changes:
    * Conary repositories no longer allow users or groups to be
      created with names that include characters other than those
      defined in the Portable Filename Character Set.
    * Server side functions that work on large datasets (getTroveSigs
      and setTroveSigs) are now using batched SQL operations for faster
      throughput

  o Bug Fixes:
    * Conary now displays a useful error message when it is unable to
      parse a "user" line in a configuration line.  Previously Conary
      would raise an unhandled exception. (CNY-1267)
    * Mirror configurations no longer use /etc/conary/entitlements as
      the default location to read entitlements used to mirror.
      Normally the entitlements used to mirror are different than the
      entitlements required to update the system.  Therefore they
      should not be used when attempting to access source or target
      repositories when mirroring. (CNY-1239)
    * "cvc emerge" now displays error messages when the underlying
       cook process results in an exception.  Previously, an unhandled
       exception message was generated. (CNY-995)

Changes in 1.1.16:
  o Server Changes:
    * The repository now returns recursive changesets with special
      "removed" trove changesets if a trove is missing or has been
      removed.  This allows the client to determine if it has the
      needed troves to perform an update.  Previously, the repository
      would raise an exception, which prevented updates from mirrors
      with byDefault=False troves (such as :debuginfo) excluded.
    * A getTroveInfo() method has been added to the Conary repository
      server.
    * Repository changeset cache database operations are now retried
      before giving up (CNY-1143)

  o Client Changes:
    * A new "isMissing" trove flag has been added.  This flag is set
      by a Conary repository when a Trove is missing.  This allows the