@@ -6,6 +6,8 @@ Changes in @NEW@:
     * Server side functions that work on large datasets (getTroveSigs
       and setTroveSigs) are now using batched SQL operations for faster
       throughput
+    * Reworked code which commit groups to the repository to significantly
+      reduce the number of SQL queries executed (CNY-1273)
 
   o Bug Fixes:
     * Conary now displays a useful error message when it is unable to
